--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
+    "@fontsource/playfair-display": "^5.0.24",
     "lucide-react": "^0.416.0",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
