--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@fontsource/playfair-display": "^5.0.24",
+    "geist": "^1.3.1",
     "lucide-react": "^0.416.0",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
@@ -21,7 +22,7 @@
     "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
-    "@mui/icons-material": "^5.11.16",
+    "@mui/icons-material": "^5.16.5",
     "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.16.5",
     "@mui/x-charts": "^6.0.0-alpha.4",
